# strava-personal-leaderboard

./: .eslintcache  .gitignore  .gitpod.dockerfile  .gitpod.yml  .graphqlrc  README.md  apollo.config.js  codegen.yml  craco.config.js  docker-compose.yaml  netlify.toml  package.json  schema.sql
.husky/: pre-commit  pre-push
ansible-scripts/: export_data.yml  export_data_from_vps.yml  import_data.yml  import_to_vps.yml
functions/: constants.js  package.json
functions/authenticate-user/: authenticate-user.js  check-for-existing-user.js
functions/create_activity/: create_activity.js  generate_graphql_variables.js
functions/fetch-gear-data/: fetch-gear-data.js
functions/fetch-segment-data/: fetch-segment-data.js
functions/fetch-weather-data-activity/: fetch-weather-data-activity.js
functions/fetch-weather-data-segment/: fetch-weather-data-segment.js
functions/graphql/: index.js
functions/refresh_user_token/: refreshToken.js  refresh_user_token.js
functions/strava/: index.js
functions/strava-webhook/: strava-webhook.js
functions/update_user_token/: update_user_token.js
functions/weather/: index.js
hasura/: config.yaml
hasura/metadata/: functions.yaml  tables.yaml
public/: index.html
src/: App.tsx
src/graphql/: index.ts
src/queries/: activity.graphql  activity.ts  dashboard.graphql  dashboard.ts  segment.graphql  segment.ts  user.ts
utils/: Pipfile  add-missing-segment-data.py  add-missing-segments-for-activity.py  add-missing-weather.py  add-missing_weather-for-segments.py  put-back-docker-host.py  pyproject.toml  replace-host-wsl.py
(+72 files in other folders)
